struttura side bar e fascia superiore

--- a/index.html
+++ b/index.html
@@ -15,14 +15,58 @@
     
     <div class="flex-container">
 
-        <div class="side-bar flex-conntainer">
+        <div class="side-bar">
+
+            <ul>
+
+                <li>
+                    <img src="img/logo-small.svg" alt="logo spotify">
+                </li>
+
+                <li>
+                    <a href="#!">
+                        <img src="img/home.svg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#!">
+                        <img src="img/search.svg" alt="">
+                        
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#!">
+                        <img src="img/libreria.svg" alt="">
+                    </a>
+                </li>
+
+            </ul>
+
+
+            <ul>
+
+                <li>
+                    <a href="#!">
+                        <img src="img/download.svg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#!">
+                        <img src="img/profile.svg" alt="">
+                    </a>
+                </li>
+
+            </ul>
 
         </div>
 
         <div class="main-container">
 
             <div class="premium">
-
+                <a href="#!" class="btn">EFFETTUA L'UPGRADE</a>
             </div>
 
             <nav class="flex-container">
