--- a/index.html
+++ b/index.html
@@ -69,7 +69,58 @@
                 <a href="#!" class="btn">EFFETTUA L'UPGRADE</a>
             </div>
 
-            <nav class="flex-container">
+            <nav class="">
+                <ul class="">
+
+                    <li>
+
+                        <a href="#!">
+                            IN EVIDENZA
+                        </a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="#!">
+                            PODCAST
+                        </a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="#!">
+                            CLASSIFICHE
+                        </a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="#!">
+                            GENERI E MOOD
+                        </a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="#!">
+                            NUOVE USCITE
+                        </a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="#!">
+                            SCOPRI
+                        </a>
+
+                    </li>
+
+                </ul>
 
             </nav>
 
