struttura main completa

--- a/index.html
+++ b/index.html
@@ -124,7 +124,115 @@
 
             </nav>
 
-            <main class="flex-container">
+            <main class="">
+
+                <section class="recent">
+
+                    <h1>Recently Played</h1>
+
+                    <ul>
+                        <li>
+                            <a href="#!">
+                                <img src="img/metal_lifting.jpg" alt="">
+                                <h2>Heavy Metal</h2>
+                                <p>Subtitle</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                <img src="img/stranger.jpeg" alt="">
+                                <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
+                                <p>Subtitle</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                <img src="img/aquietplace.jpeg" alt="">
+                                <h2>A Quiet Place</h2>
+                                <p>Subtitle</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                <img src="img/split.jpeg" alt="">
+                                <h2>Split</h2>
+                                <p>Subtitle</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                <img src="img/cure.jpeg" alt="">
+                                <h2>A Cure for Wellness</h2>
+                                <p>Subtitle</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                <img src="img/sinister.jpeg" alt="">
+                                <h2>Sinister</h2>
+                                <p>Subtitle</p>
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </section>
+
+                <section class="for-you">
+
+                    <h1>Creato Per Jhon Doe</h1>
+
+                    <p>Piu ascolti, Piu accurati saranno i suggerimenti</p>
+
+                    <ul>
+                        <li>
+                            <a href="#1">
+                                <img src="img/radar.jpeg" alt="">
+                                <h2>Release Radar</h2>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#1">
+                                <img src="img/mixdaily.jpeg" alt="">
+                                <h2>Daily Mix 1</h2>
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </section>
+
+                <section class="popular">
+
+                    <h1>Artisti Piu Popolari</h1>
+
+                    <p>Piu ascolti, Piu accurati saranno i suggerimenti</p>
+
+                    <ul>
+
+                        <li>
+                            <a href="#!">
+                                <img src="img/youg.jpeg" alt="">
+                                <h2>Lana Del Ray</h2>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#!">
+                                <img src="img/einaudi.jpeg" alt="">
+                                <h2>Einaudi</h2>
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </section>
 
             </main>
 
